-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.1.0
-
None
-
3
-
4925
The lustre_types.h header that was in 1.8 is not present on master. This means that any one including lustre/lustre_user.h in their user-space code is going to hit a compiler error.
Mining the git logs, it looks like
lustre/include/linux/lustre_types.h
from 1.8 was replaced in 2.0 by
libcfs/include/libcfs/posix/posix-types.h
as part of libcfs cleanup patches. However, posix-types.h is neither installed as part of lustre, nor included in the user-space header files.
I would think that posix-types.h needs to be installed under /usr/include/lustre and then conditionally included (!KERNEL) by lustre_user.h and any other headers that need it.
- is duplicated by
-
LU-4986
lustre_types.h gone
-
- Resolved
-