lustre/include/lustre/lustre_user.h
@@ -46,6 +46,9 @@
  * @{
  */
 
+#ifndef __KERNEL__
+#include <libcfs/posix/posix-types.h>
+#endif
 #include <lustre/ll_fiemap.h>
 #if defined(__linux__)
 #include <linux/lustre_user.h>
